# picor

./: .gitignore  AUTHORS  Makefile.am  README.md  configure.ac  picor.pc.in
include/: Makefile.am  avghash.h  img_tools.h  xcorr.h
lib/: Makefile.am  avghash.c  img_tools.c  xcorr.c
src/: Makefile.am
src/basic_pic_retriever/: Makefile.am  basic_pic_retriever.c  picor-basic-pic-retriever-stats
src/basic_pic_retriever/stats_resources/: view.html
src/basic_pic_retriever/stats_resources/avghash/: plot.cmd  view.html
src/basic_pic_retriever/stats_resources/xcorr/: plot.cmd  view.html
src/pic_indexer/: Makefile.am  index_folder.c  pic_indexer.h  retrieve_pic.c
